# Squidiff

./: LICENSE  README.md  README.md.save  pyproject.toml  sample_squidiff.py  train_squidiff.py
.ipynb_checkpoints/: LICENSE-checkpoint  pyproject-checkpoint.toml  setup-checkpoint.py
Squidiff/: diffusion.py  dist_util.py  logger.py  script_util.py  scrna_datasets.py  train_util.py
Squidiff.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Squidiff/.ipynb_checkpoints/: MLPModel-checkpoint.py  __init__-checkpoint.py
notebooks/: figure2_data1_scgen.ipynb  paga_fig2.ipynb
squidiff/: MLPModel.py  diffusion.py  dist_util.py  nn.py  respace.py  script_util.py  scrna_datasets.py  train_util.py
squidiff/archived/: model-00.py  model-4.py  model1.py  squidiff_DDIM0.py  trainer-0.py  trainer0.py  utils0.py
squidiff/archived/.ipynb_checkpoints/: diffusion-0-checkpoint.py  model0-checkpoint.py  squidiff_0-checkpoint.py
