[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Squidiff"
version = "1.0.8"
dependencies = [
]
requires-python = ">= 3.8"
description = "Diffusion model-based generative framework designed to predict transcriptomic changes across diverse cell types in response to a wide range of environmental changes."
readme = "README.md"
license = {file="LICENSE"}
authors = [{name = "Siyu He", email = "siyuhe@stanford.edu"}]

[project.optional-dependencies]
gui = ["PyQt5"]
cli = [
  "rich",
  "click",
]

[project.scripts]
spam-cli = "spam:main_cli"

[project.gui-scripts]
spam-gui = "spam:main_gui"

[project.entry-points."spam.magical"]
tomatoes = "spam:main_tomatoes"
